{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 145,
  "lineage": "34ea33e1-c04d-fb42-6205-d501fb12ee1f",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.12.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/RG-Sairam/providers/Microsoft.Network/virtualNetworks/Sai/subnets/Subnet1",
            "name": "Subnet1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "RG-Sairam",
            "virtual_network_name": "Sai"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.NSG[0]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/test2/providers/Microsoft.Network/networkSecurityGroups/NSG-0",
            "location": "westeurope",
            "name": "NSG-0",
            "resource_group_name": "test2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ALlow-ssh",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "NSG-0",
            "resource_group_name": "test2",
            "subscription_id": "0e9784a1-7ffb-4ad5-824f-2aaa98c41256"
          },
          "dependencies": [
            "module.rg3.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.NSG[1]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/test2/providers/Microsoft.Network/networkSecurityGroups/NSG-1",
            "location": "westeurope",
            "name": "NSG-1",
            "resource_group_name": "test2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ALlow-ssh",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "NSG-1",
            "resource_group_name": "test2",
            "subscription_id": "0e9784a1-7ffb-4ad5-824f-2aaa98c41256"
          },
          "dependencies": [
            "module.rg3.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.NSG[2]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/test2/providers/Microsoft.Network/networkSecurityGroups/NSG-2",
            "location": "westeurope",
            "name": "NSG-2",
            "resource_group_name": "test2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ALlow-ssh",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "NSG-2",
            "resource_group_name": "test2",
            "subscription_id": "0e9784a1-7ffb-4ad5-824f-2aaa98c41256"
          },
          "dependencies": [
            "module.rg3.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.nic1[0]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": true,
            "id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/test/providers/Microsoft.Network/networkInterfaces/f1-0",
            "internal_domain_name_suffix": "cf4bgekvmvburhxh15k2espvch.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ip1",
                "primary": true,
                "private_ip_address": "10.12.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/test/providers/Microsoft.Network/publicIPAddresses/testpubic-0",
                "subnet_id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/RG-Sairam/providers/Microsoft.Network/virtualNetworks/Sai/subnets/Subnet1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "mac_address": "7C-ED-8D-13-A3-53",
            "name": "f1-0",
            "private_ip_address": "10.12.0.5",
            "private_ip_addresses": [
              "10.12.0.5"
            ],
            "resource_group_name": "test",
            "virtual_machine_id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/test2/providers/Microsoft.Compute/virtualMachines/Linux-vm-0"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "f1-0",
            "resource_group_name": "test",
            "subscription_id": "0e9784a1-7ffb-4ad5-824f-2aaa98c41256"
          },
          "dependencies": [
            "data.azurerm_subnet.subnet",
            "module.pub.azurerm_public_ip.name",
            "module.rg2.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.nic1[1]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": true,
            "id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/test/providers/Microsoft.Network/networkInterfaces/f1-1",
            "internal_domain_name_suffix": "cf4bgekvmvburhxh15k2espvch.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ip1",
                "primary": true,
                "private_ip_address": "10.12.0.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/test/providers/Microsoft.Network/publicIPAddresses/testpubic-1",
                "subnet_id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/RG-Sairam/providers/Microsoft.Network/virtualNetworks/Sai/subnets/Subnet1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "mac_address": "7C-ED-8D-0B-4D-25",
            "name": "f1-1",
            "private_ip_address": "10.12.0.6",
            "private_ip_addresses": [
              "10.12.0.6"
            ],
            "resource_group_name": "test",
            "virtual_machine_id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/test2/providers/Microsoft.Compute/virtualMachines/Linux-vm-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "f1-1",
            "resource_group_name": "test",
            "subscription_id": "0e9784a1-7ffb-4ad5-824f-2aaa98c41256"
          },
          "dependencies": [
            "data.azurerm_subnet.subnet",
            "module.pub.azurerm_public_ip.name",
            "module.rg2.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.nic1[2]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": true,
            "id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/test/providers/Microsoft.Network/networkInterfaces/f1-2",
            "internal_domain_name_suffix": "cf4bgekvmvburhxh15k2espvch.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ip1",
                "primary": true,
                "private_ip_address": "10.12.0.7",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/test/providers/Microsoft.Network/publicIPAddresses/testpubic-2",
                "subnet_id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/RG-Sairam/providers/Microsoft.Network/virtualNetworks/Sai/subnets/Subnet1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "mac_address": "00-0D-3A-A8-59-C7",
            "name": "f1-2",
            "private_ip_address": "10.12.0.7",
            "private_ip_addresses": [
              "10.12.0.7"
            ],
            "resource_group_name": "test",
            "virtual_machine_id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/test2/providers/Microsoft.Compute/virtualMachines/Linux-vm-2"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "f1-2",
            "resource_group_name": "test",
            "subscription_id": "0e9784a1-7ffb-4ad5-824f-2aaa98c41256"
          },
          "dependencies": [
            "data.azurerm_subnet.subnet",
            "module.pub.azurerm_public_ip.name",
            "module.rg2.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.nictasks[0]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": true,
            "id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/Tasks/providers/Microsoft.Network/networkInterfaces/task-avset-0",
            "internal_domain_name_suffix": "cf4bgekvmvburhxh15k2espvch.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ip0",
                "primary": true,
                "private_ip_address": "10.12.0.10",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/RG-Sairam/providers/Microsoft.Network/virtualNetworks/Sai/subnets/Subnet1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "mac_address": "00-0D-3A-48-0D-DB",
            "name": "task-avset-0",
            "private_ip_address": "10.12.0.10",
            "private_ip_addresses": [
              "10.12.0.10"
            ],
            "resource_group_name": "Tasks",
            "virtual_machine_id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/TASKS/providers/Microsoft.Compute/virtualMachines/tasks-vm-0"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "task-avset-0",
            "resource_group_name": "Tasks",
            "subscription_id": "0e9784a1-7ffb-4ad5-824f-2aaa98c41256"
          },
          "dependencies": [
            "data.azurerm_resource_group.rg-task",
            "data.azurerm_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.nictasks[1]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": true,
            "id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/Tasks/providers/Microsoft.Network/networkInterfaces/task-avset-1",
            "internal_domain_name_suffix": "cf4bgekvmvburhxh15k2espvch.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ip1",
                "primary": true,
                "private_ip_address": "10.12.0.8",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/RG-Sairam/providers/Microsoft.Network/virtualNetworks/Sai/subnets/Subnet1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "mac_address": "00-0D-3A-BD-AD-7B",
            "name": "task-avset-1",
            "private_ip_address": "10.12.0.8",
            "private_ip_addresses": [
              "10.12.0.8"
            ],
            "resource_group_name": "Tasks",
            "virtual_machine_id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/TASKS/providers/Microsoft.Compute/virtualMachines/tasks-vm-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "task-avset-1",
            "resource_group_name": "Tasks",
            "subscription_id": "0e9784a1-7ffb-4ad5-824f-2aaa98c41256"
          },
          "dependencies": [
            "data.azurerm_resource_group.rg-task",
            "data.azurerm_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.nictasks[2]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": true,
            "id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/Tasks/providers/Microsoft.Network/networkInterfaces/task-avset-2",
            "internal_domain_name_suffix": "cf4bgekvmvburhxh15k2espvch.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ip2",
                "primary": true,
                "private_ip_address": "10.12.0.11",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/RG-Sairam/providers/Microsoft.Network/virtualNetworks/Sai/subnets/Subnet1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "name": "task-avset-2",
            "private_ip_address": "10.12.0.11",
            "private_ip_addresses": [
              "10.12.0.11"
            ],
            "resource_group_name": "Tasks"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "task-avset-2",
            "resource_group_name": "Tasks",
            "subscription_id": "0e9784a1-7ffb-4ad5-824f-2aaa98c41256"
          },
          "dependencies": [
            "data.azurerm_resource_group.rg-task",
            "data.azurerm_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.nictasks[3]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": true,
            "id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/Tasks/providers/Microsoft.Network/networkInterfaces/task-avset-3",
            "internal_domain_name_suffix": "cf4bgekvmvburhxh15k2espvch.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ip3",
                "primary": true,
                "private_ip_address": "10.12.0.9",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/RG-Sairam/providers/Microsoft.Network/virtualNetworks/Sai/subnets/Subnet1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "name": "task-avset-3",
            "private_ip_address": "10.12.0.9",
            "private_ip_addresses": [
              "10.12.0.9"
            ],
            "resource_group_name": "Tasks"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "task-avset-3",
            "resource_group_name": "Tasks",
            "subscription_id": "0e9784a1-7ffb-4ad5-824f-2aaa98c41256"
          },
          "dependencies": [
            "data.azurerm_resource_group.rg-task",
            "data.azurerm_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.pub[0]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/test/providers/Microsoft.Network/publicIPAddresses/testpubic-0",
            "idle_timeout_in_minutes": 4,
            "ip_address": "98.71.171.31",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "testpubic-0",
            "resource_group_name": "test",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.rg2.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.pub[1]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/test/providers/Microsoft.Network/publicIPAddresses/testpubic-1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "9.163.3.141",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "testpubic-1",
            "resource_group_name": "test",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.rg2.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.pub[2]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/0e9784a1-7ffb-4ad5-824f-2aaa98c41256/resourceGroups/test/providers/Microsoft.Network/publicIPAddresses/testpubic-2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "98.71.218.165",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "testpubic-2",
            "resource_group_name": "test",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.rg2.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}